--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -11,3 +11,15 @@ jobs:
       - uses: actions/checkout@v3
       - name: Build the Docker image
         run: docker build . --file Dockerfile --tag canberktest:$(date +%s)
+  trigger:
+    name: Dispatch to `other-repo`
+    runs-on: ubuntu-latest
+    steps:
+      - name: Emit repository_dispatch
+        uses: mvasigh/dispatch-action@main
+        with:
+          # You should create a personal access token and store it in your repository
+          token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+          repo: https://github.com/canberkaslan/test_actions_cd.git
+          owner: canberk
+          event_type: sample_push
