--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -14,12 +14,15 @@ jobs:
   trigger:
     name: Dispatch to `other-repo`
     runs-on: ubuntu-latest
+    depends_on: build
     steps:
-      - name: Emit repository_dispatch
+      - name: Dispatch submodule_push event
         uses: mvasigh/dispatch-action@main
         with:
-          # You should create a personal access token and store it in your repository
           token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
-          repo: https://github.com/canberkaslan/test_actions_cd.git
-          owner: canberk
-          event_type: sample_push
+          repo: 'https://github.com/canberkaslan/test_actions_cd.git'
+          event_type: submodule_push
+          message: |
+            {
+              "foo": "bar"
+            }
