--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -14,7 +14,7 @@ jobs:
   trigger:
     name: Dispatch to `other-repo`
     runs-on: ubuntu-latest
-    depends_on: build
+    depend_on: build
     steps:
       - name: Dispatch submodule_push event
         uses: mvasigh/dispatch-action@main
