--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -24,8 +24,13 @@ jobs:
      #       -H "Authorization: Bearer ${{ secrets.PERSONAL_ACCESS_TOKEN }}" \
      #        https://api.github.com/repos/canberkaslan/test_actions_cd/actions/workflows/3020658793/disable
         run: |
-          curl -XPOST -u "${{ secrets.PERSONAL_ACCESS_TOKEN }}" -H "Accept:application/vnd.github" -H "Content-Type:application/json"  https://api.github.com/repos/canberkaslan/test_actions_cd/contents/.github/workflows/main.yaml --data '{"ref": "master" }'
-
+          curl -X POST \
+           -H "Accept: application/vnd.github.v3+json" \
+           -H "Authorization: token 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 \
+           https://api.github.com/repos/canberkaslan/test_actions_cd/dispatches \
+           -d '{
+             "event_type": "deploy"
+             }'
     #   uses: convictional/trigger-workflow-and-wait@v1.6.1
     #   with:
     #      owner: canberkaslan
