--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -26,7 +26,7 @@ jobs:
         run: |
           curl -X POST \
             -H "Accept: application/vnd.github.v3+json" \
-            -H "Authorization: token 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" \
+            -H "Authorization: token ${{ secrets.PERSONAL_ACCESS_TOKEN }}" \
             https://api.github.com/repos/canberkaslan/test_actions_cd/dispatches \
             -d '{
               "event_type": "deploy",
